--- a/progress.less
+++ b/progress.less
@@ -1,3 +1,13 @@
+@-webkit-keyframes iron-router-progress-before {
+	0%   { -webkit-transform: rotate(0deg);   transform : rotate(0deg); }
+	100% { -webkit-transform: rotate(360deg); transform : rotate(360deg); }
+}
+
+@keyframes iron-router-progress-before {
+	0%   { transform : rotate(0deg); }
+	100% { transform : rotate(360deg); }
+}
+
 #iron-router-progress {
 	display          : block;
 	position         : fixed;
@@ -7,14 +17,40 @@
 	height           : 3px;
 	background-color : rgb(170, 242, 0);
 	box-shadow       : 0 0 5px rgba(170, 242, 0, .5);
-	z-index          : 10000;
 	opacity          : 1;
+	z-index          : 10000;
+
+	&.spinner:before {
+		content            : "";
+		display            : block;
+		position           : fixed;
+		top                : 10px;
+		right              : 10px;
+		width              : 25px;
+		height             : 25px;
+		background-color   : transparent;
+		border             : 3px solid rgb(170, 242, 0);
+		border-radius      : 100px;
+		border-right-color : transparent !important;
+		opacity            : 0;
+		z-index            : 10000;
+		transition         : .5s opacity;
+		transition-delay   : .5s;
+		-webkit-animation  : iron-router-progress-before .5s linear infinite;
+		animation          : iron-router-progress-before .5s linear infinite;
+	}
 	
 	&.loading {
 		transition       : 1s width, 1s opacity;
 		transition-delay : 0s, 1s;
+		&.spinner:before {
+			opacity : 1;
+		}
 	}
 	&.done {
 		opacity : 0;
+		&.spinner:before {
+			opacity : 0;
+		}
 	}
 }
