--- a/progress.less
+++ b/progress.less
@@ -49,6 +49,7 @@
 		border-right-color : transparent !important;
 		opacity            : 0;
 		z-index            : 10000;
+		pointer-events     : none;
 		transition         : .5s opacity;
 		transition-delay   : .5s;
 	}
